Fix wifi_component build with 10.9+ SDK

Use forward declaration to build on both 10.6 and 10.9 SDK and
runtime checking to make sure we don't call the wrong API.

BUG=390212

Review URL: https://codereview.chromium.org/530193004

Cr-Commit-Position: refs/heads/master@{#293911}

Former-commit-id: 6acb57597d5d18ab9d0e2954993863a8e2848774